--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,8 @@ body {
 	margin: 0;
 }
 header {
-	padding: 10px 0;
+	font-size: 18px;
+	padding: 15px 0;
 	background: #f5ab9e;
 	color: #8c3a2b;
 }
