--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	background-color: #f1f1f1;
 }
 header {
 	font-size: 18px;
@@ -8,7 +9,7 @@ header {
 	color: #8c3a2b;
 }
 .inner {
-	width: 800px;
+	width: 600px;
 	margin: 0 auto;
 }
 .timer {
@@ -16,4 +17,31 @@ header {
 }
 .timer span {
 	color: #f1f1f1;
+}
+#main {
+	height: 100%;
+	min-height: 620px;
+	width: 1000px;
+	margin: 0 auto;
+	position: relative;
+	background-color: #ffffff;
+	border-top: none;
+	border-bottom: none;
+	-webkit-box-shadow: 0 0 4px rgba(0,0,0,0.3);
+	-moz-box-shadow: 0 0 4px rgba(0,0,0,0.3);
+	box-shadow: 0 0 4px rgba(0,0,0,0.3);
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+footer {
+	font-size: 12px;
+	color: #777;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+}
+footer > a {
+	color: #333;
+	text-decoration: none;
 }
