--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,11 @@ header {
 	display: inline-block;
 }
 .timer span {
-	color: #f1f1f1;
+	color: #8c3a2b;
+	background-color: #f8f8f8;
+	padding: 2px;
+	border: 0.1px solid #fff;
+	border-radius: 2px;
 }
 #main {
 	height: 100%;
@@ -42,6 +46,7 @@ header {
 }
 #code {
 	font-family: Monaco, "Source Code Pro", Consolas, sans-serif;
+	color: #333;
 	font-size: 16px;
 	margin-top: 50px;
 }
