--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ header {
 .timer span {
 	color: #8c3a2b;
 	background-color: #f8f8f8;
-	padding: 2px;
+	padding: 2px 4px;
 	border: 0.1px solid #fff;
 	border-radius: 2px;
 }
