--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,8 @@ header {
 	color: #8c3a2b;
 }
 .inner {
-	width: 650px;
+	max-width: 650px;
+	min-width: 320px;
 	margin: 0 auto;
 }
 .timer {
@@ -27,7 +28,7 @@ header {
 #main {
 	height: 100%;
 	min-height: 620px;
-	width: 1000px;
+	max-width: 1000px;
 	margin: 0 auto;
 	position: relative;
 	background-color: #ffffff;
@@ -41,7 +42,7 @@ header {
 }
 #heart {
 	display: none;
-	width: 1000px;
+	max-width: 1000px;
 	margin-top: 30px;
 }
 #code {
